# qondor-api-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
src/qondor_api_sdk/: __init__.py  _base.py  _retry.py  client.py  errors.py
src/qondor_api_sdk/models/: __init__.py  contact_person.py  customer.py  enums.py  offer.py  office.py  product.py  product_group.py  project.py  statistics.py  supplier.py
src/qondor_api_sdk/modules/: __init__.py  contact_person.py  customer.py  offer.py  office.py  product.py  product_group.py  project.py  statistics.py  supplier.py
tests/: conftest.py  test_client.py  test_contact_person_module.py  test_customer_module.py  test_errors.py  test_models.py  test_offer_module.py  test_office_module.py  test_product_group_module.py  test_product_module.py  test_project_module.py  test_retry.py  test_supplier_module.py
tests/integration/: conftest.py  helpers.py  test_contact_person.py  test_customer.py  test_offer.py  test_office.py  test_product.py  test_product_group.py  test_project.py  test_statistics.py  test_supplier.py
