[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qondor-api-sdk"
dynamic = ["version"]
description = "Typed Python SDK for the Qondor API"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Qondor", email = "support@qondor.com" }]
keywords = ["qondor", "api", "sdk", "async", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "tenacity>=9,<10",
]

[project.urls]
Homepage = "https://qondor.com"
Repository = "https://github.com/Qondor-AS/qondor-api-sdk"
Issues = "https://github.com/Qondor-AS/qondor-api-sdk/issues"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-httpx>=0.34,<1",
    "ruff>=0.4,<1",
]

[tool.hatch.version]
path = "src/qondor_api_sdk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/qondor_api_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: hits real Qondor API (requires QONDOR_SUBSCRIPTION_KEY and QONDOR_ENV)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
